Integrated McLighting better, using the backend server
