# Node-Backend/src/API/Controllers/Brightness-Controller.ts
@@ -1,15 +1,29 @@
-import { Controller, Post, Route, SuccessResponse, Tags } from 'tsoa'
+import {
+  Body,
+  Controller,
+  Deprecated,
+  Get,
+  Post,
+  Route,
+  SuccessResponse,
+  Tags,
+} from 'tsoa'
 import {
   commandHandler,
   CommandHandler,
 } from '../../CommandHandler/CommandHandler'
+import { SpeedInformation } from '../../Types/SpeedInformation'
+import { BrightnessInformation } from '../../Types/BrightnessInformation'
+import { InformationService } from '../Services/InformationService'
 
 @Route('brightness')
 @Tags('Brightness')
 export class BrightnessController extends Controller {
   private commandHandler: CommandHandler = commandHandler
+  private informationService: InformationService = new InformationService()
 
   @Post('increase')
+  @Deprecated()
   @SuccessResponse(202, 'Accepted')
   public async increaseBrightness(): Promise<void> {
     this.setStatus(202)
@@ -17,9 +31,24 @@ export class BrightnessController extends Controller {
   }
 
   @Post('decrease')
+  @Deprecated()
   @SuccessResponse(202, 'Accepted')
   public async decreaseBrightness(): Promise<void> {
     this.setStatus(202)
     this.commandHandler.decreaseBrightness()
+  }
+
+  @Post('set')
+  @SuccessResponse(200, 'OK')
+  public async setBrightness(
+    @Body() brightness: BrightnessInformation
+  ): Promise<BrightnessInformation> {
+    return this.informationService.setBrightness(brightness.brightness)
+  }
+
+  @Get()
+  @SuccessResponse(200, 'OK')
+  public async getSpeed(): Promise<BrightnessInformation> {
+    return this.informationService.getBrightness()
   }
 }
